[gd_scene load_steps=26 format=3 uid="uid://b5dbdj7a01rnh"]

[ext_resource type="Script" uid="uid://drm6cov5v58q7" path="res://entitites/characters/player/player_controller.gd" id="1_o0ypg"]
[ext_resource type="PackedScene" uid="uid://c8mf4gchguc7k" path="res://utilities/components/camera_component/camera_component.tscn" id="1_urf00"]
[ext_resource type="Script" uid="uid://dekkkla7o5p62" path="res://utilities/components/mouse_capture_component/mouse_capture_component.gd" id="2_o0ypg"]
[ext_resource type="Script" uid="uid://dbdibww2d0kix" path="res://utilities/components/input_component/input_component.gd" id="3_kl37f"]
[ext_resource type="Script" uid="uid://hmlskf4frvb5" path="res://utilities/components/gamepad_capture_component/gamepad_capture_component.gd" id="4_3fpg0"]
[ext_resource type="Script" uid="uid://bxdb83g10x6r0" path="res://utilities/components/keyboard_capture_component/keyboard_capture_component.gd" id="5_tm6kh"]
[ext_resource type="Script" uid="uid://dmgpavyswfs76" path="res://utilities/components/velocity_component/velocity_component.gd" id="7_3fpg0"]
[ext_resource type="Script" uid="uid://couw105c3bde4" path="res://addons/godot_state_charts/state_chart.gd" id="8_j62ud"]
[ext_resource type="Script" uid="uid://cp6xwp1511nem" path="res://entitites/characters/player/state_machine/player_state_machine.gd" id="9_q8ui6"]
[ext_resource type="Script" uid="uid://c1vp0ojjvaby1" path="res://addons/godot_state_charts/parallel_state.gd" id="9_yeoll"]
[ext_resource type="Script" uid="uid://jk2jm1g6q853" path="res://addons/godot_state_charts/compound_state.gd" id="10_q8ui6"]
[ext_resource type="Script" uid="uid://cytafq8i1y8qm" path="res://addons/godot_state_charts/atomic_state.gd" id="11_o2ofj"]
[ext_resource type="Script" uid="uid://cf1nsco3w0mf6" path="res://addons/godot_state_charts/transition.gd" id="12_yeoll"]
[ext_resource type="Script" uid="uid://bq6yqovql57ni" path="res://entitites/characters/player/state_machine/grounded_state.gd" id="14_jinur"]
[ext_resource type="Script" uid="uid://cj6rrb45l5xud" path="res://entitites/characters/player/state_machine/idle_state.gd" id="14_o2ofj"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="15_tbsoe"]
[ext_resource type="Script" uid="uid://dv02g1xs036hx" path="res://entitites/characters/player/state_machine/walking_state.gd" id="15_vig8n"]
[ext_resource type="Script" uid="uid://bc6tkfqv3oxk0" path="res://entitites/characters/player/state_machine/sprinting_state.gd" id="16_ggsv1"]
[ext_resource type="Script" uid="uid://dflktb40ya3fx" path="res://entitites/characters/player/state_machine/standing_state.gd" id="17_858af"]
[ext_resource type="Script" uid="uid://4v60pep8c2av" path="res://entitites/characters/player/state_machine/crouching_state.gd" id="18_21wgt"]
[ext_resource type="Script" uid="uid://cv2vs0xe6msly" path="res://entitites/characters/player/state_machine/airborne_state.gd" id="18_m7jk0"]
[ext_resource type="PackedScene" uid="uid://cbfejgssmtih3" path="res://entitites/characters/player/ui/player_interface.tscn" id="22_0x1c0"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_d271q"]

[sub_resource type="SphereShape3D" id="SphereShape3D_21wgt"]

[sub_resource type="SphereShape3D" id="SphereShape3D_jinur"]

[node name="PlayerController" type="CharacterBody3D" node_paths=PackedStringArray("velocity_component", "input_component", "camera_component", "state_chart", "standing_collision", "crouching_collision", "crouching_check")]
script = ExtResource("1_o0ypg")
velocity_component = NodePath("VelocityComponent")
input_component = NodePath("InputComponent")
camera_component = NodePath("Camera/CameraComponent")
state_chart = NodePath("PlayerStateMachine")
standing_collision = NodePath("StandingCollision")
crouching_collision = NodePath("CrouchCollision")
crouching_check = NodePath("CrouchCheck")

[node name="StandingCollision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_d271q")

[node name="CrouchCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("SphereShape3D_21wgt")

[node name="CrouchCheck" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("SphereShape3D_jinur")
target_position = Vector3(0, 0.5, 0)

[node name="Camera" type="Node3D" parent="."]

[node name="CameraComponent" parent="Camera" node_paths=PackedStringArray("camera_controller_anchor", "input", "player") instance=ExtResource("1_urf00")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
camera_controller_anchor = NodePath("../CameraPositionMarker")
input = NodePath("../../InputComponent")
player = NodePath("../..")

[node name="CameraPositionMarker" type="Marker3D" parent="Camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="VelocityComponent" type="Node" parent="." node_paths=PackedStringArray("character")]
script = ExtResource("7_3fpg0")
character = NodePath("..")
default_speed = 3.0
sprint_speed = 7.0
metadata/_custom_type_script = "uid://dmgpavyswfs76"

[node name="InputComponent" type="Node" parent="." node_paths=PackedStringArray("component_mouse_capture", "component_gamepad_capture", "component_keyboard_capture")]
script = ExtResource("3_kl37f")
component_mouse_capture = NodePath("MouseCaptureComponent")
component_gamepad_capture = NodePath("GamepadCaptureComponent")
component_keyboard_capture = NodePath("KeyboardCaptureComponent")
metadata/_custom_type_script = "uid://dbdibww2d0kix"

[node name="GamepadCaptureComponent" type="Node" parent="InputComponent"]
script = ExtResource("4_3fpg0")
metadata/_custom_type_script = "uid://hmlskf4frvb5"

[node name="KeyboardCaptureComponent" type="Node" parent="InputComponent"]
script = ExtResource("5_tm6kh")
metadata/_custom_type_script = "uid://bxdb83g10x6r0"

[node name="MouseCaptureComponent" type="Node" parent="InputComponent"]
script = ExtResource("2_o0ypg")
metadata/_custom_type_script = "uid://dekkkla7o5p62"

[node name="PlayerStateMachine" type="Node" parent="."]
script = ExtResource("8_j62ud")
metadata/_custom_type_script = "uid://couw105c3bde4"

[node name="Root" type="Node" parent="PlayerStateMachine"]
script = ExtResource("9_yeoll")
metadata/_custom_type_script = "uid://c1vp0ojjvaby1"

[node name="Movement" type="Node" parent="PlayerStateMachine/Root"]
script = ExtResource("10_q8ui6")
initial_state = NodePath("Grounded")
metadata/_custom_type_script = "uid://jk2jm1g6q853"

[node name="Grounded" type="Node" parent="PlayerStateMachine/Root/Movement"]
script = ExtResource("10_q8ui6")
initial_state = NodePath("Idle")
metadata/_custom_type_script = "uid://jk2jm1g6q853"

[node name="Idle" type="Node" parent="PlayerStateMachine/Root/Movement/Grounded"]
script = ExtResource("11_o2ofj")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="OnMoving" type="Node" parent="PlayerStateMachine/Root/Movement/Grounded/Idle"]
script = ExtResource("12_yeoll")
to = NodePath("../../Moving")
event = &"onMoving"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="Moving" type="Node" parent="PlayerStateMachine/Root/Movement/Grounded"]
script = ExtResource("10_q8ui6")
initial_state = NodePath("Walking")
metadata/_custom_type_script = "uid://jk2jm1g6q853"

[node name="Walking" type="Node" parent="PlayerStateMachine/Root/Movement/Grounded/Moving"]
script = ExtResource("11_o2ofj")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="Sprinting" type="Node" parent="PlayerStateMachine/Root/Movement/Grounded/Moving"]
script = ExtResource("11_o2ofj")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="OnIdle" type="Node" parent="PlayerStateMachine/Root/Movement/Grounded/Moving"]
script = ExtResource("12_yeoll")
to = NodePath("../../Idle")
event = &"onIdle"
delay_in_seconds = "0.0"

[node name="OnSprinting" type="Node" parent="PlayerStateMachine/Root/Movement/Grounded/Moving"]
script = ExtResource("12_yeoll")
to = NodePath("../Sprinting")
event = &"onSprinting"
delay_in_seconds = "0.0"

[node name="OnWalking" type="Node" parent="PlayerStateMachine/Root/Movement/Grounded/Moving"]
script = ExtResource("12_yeoll")
to = NodePath("../Walking")
event = &"onWalking"
delay_in_seconds = "0.0"

[node name="OnAirborne" type="Node" parent="PlayerStateMachine/Root/Movement/Grounded/Moving"]
script = ExtResource("12_yeoll")
to = NodePath("../../../Airborne")
event = &"onAirborne"
delay_in_seconds = "0.0"

[node name="Airborne" type="Node" parent="PlayerStateMachine/Root/Movement"]
script = ExtResource("10_q8ui6")
initial_state = NodePath("Jumping")
metadata/_custom_type_script = "uid://jk2jm1g6q853"

[node name="Jumping" type="Node" parent="PlayerStateMachine/Root/Movement/Airborne"]
script = ExtResource("11_o2ofj")

[node name="OnGrounded" type="Node" parent="PlayerStateMachine/Root/Movement/Airborne/Jumping"]
script = ExtResource("12_yeoll")
to = NodePath("../../../Grounded")
event = &"onGrounded"
delay_in_seconds = "0.0"

[node name="Posture" type="Node" parent="PlayerStateMachine/Root"]
script = ExtResource("10_q8ui6")
initial_state = NodePath("Standing")

[node name="Standing" type="Node" parent="PlayerStateMachine/Root/Posture"]
script = ExtResource("11_o2ofj")

[node name="Crouching" type="Node" parent="PlayerStateMachine/Root/Posture"]
script = ExtResource("11_o2ofj")

[node name="OnStanding" type="Node" parent="PlayerStateMachine/Root/Posture"]
script = ExtResource("12_yeoll")
to = NodePath("../Standing")
event = &"onStanding"
delay_in_seconds = "0.0"

[node name="OnCrouching" type="Node" parent="PlayerStateMachine/Root/Posture"]
script = ExtResource("12_yeoll")
to = NodePath("../Crouching")
event = &"onCrouching"
delay_in_seconds = "0.0"

[node name="PlayerState" type="Node" parent="." node_paths=PackedStringArray("player_controller")]
unique_name_in_owner = true
script = ExtResource("9_q8ui6")
player_controller = NodePath("..")

[node name="MovementState" type="Node" parent="PlayerState"]

[node name="GroundedState" type="Node" parent="PlayerState/MovementState"]
script = ExtResource("14_jinur")

[node name="IdleState" type="Node" parent="PlayerState/MovementState/GroundedState"]
script = ExtResource("14_o2ofj")

[node name="MovingState" type="Node" parent="PlayerState/MovementState/GroundedState"]

[node name="WalkingState" type="Node" parent="PlayerState/MovementState/GroundedState/MovingState"]
script = ExtResource("15_vig8n")

[node name="SprintingState" type="Node" parent="PlayerState/MovementState/GroundedState/MovingState"]
script = ExtResource("16_ggsv1")

[node name="AirborneState" type="Node" parent="PlayerState/MovementState"]
script = ExtResource("18_m7jk0")

[node name="PostureState" type="Node" parent="PlayerState"]

[node name="StandingState" type="Node" parent="PlayerState/PostureState"]
script = ExtResource("17_858af")

[node name="CrouchingState" type="Node" parent="PlayerState/PostureState"]
script = ExtResource("18_21wgt")

[node name="StateChartDebugger" parent="." instance=ExtResource("15_tbsoe")]
offset_right = -851.0
offset_bottom = -286.0
initial_node_to_watch = NodePath("../PlayerStateMachine")

[node name="Reticle" parent="." instance=ExtResource("22_0x1c0")]

[node name="ReticleDraw" parent="Reticle" index="0" node_paths=PackedStringArray("player_controller")]
player_controller = NodePath("../..")

[connection signal="state_physics_processing" from="PlayerStateMachine/Root/Movement/Grounded" to="PlayerState/MovementState/GroundedState" method="_on_grounded_state_physics_processing"]
[connection signal="state_processing" from="PlayerStateMachine/Root/Movement/Grounded/Idle" to="PlayerState/MovementState/GroundedState/IdleState" method="_on_idle_state_processing"]
[connection signal="state_entered" from="PlayerStateMachine/Root/Movement/Grounded/Moving/Walking" to="PlayerState/MovementState/GroundedState/MovingState/WalkingState" method="_on_walking_state_entered"]
[connection signal="state_physics_processing" from="PlayerStateMachine/Root/Movement/Grounded/Moving/Walking" to="PlayerState/MovementState/GroundedState/MovingState/WalkingState" method="_on_walking_state_physics_processing"]
[connection signal="state_entered" from="PlayerStateMachine/Root/Movement/Grounded/Moving/Sprinting" to="PlayerState/MovementState/GroundedState/MovingState/SprintingState" method="_on_sprinting_state_entered"]
[connection signal="state_processing" from="PlayerStateMachine/Root/Movement/Grounded/Moving/Sprinting" to="PlayerState/MovementState/GroundedState/MovingState/SprintingState" method="_on_sprinting_state_processing"]
[connection signal="state_physics_processing" from="PlayerStateMachine/Root/Movement/Airborne" to="PlayerState/MovementState/AirborneState" method="_on_airborne_state_physics_processing"]
[connection signal="state_entered" from="PlayerStateMachine/Root/Posture/Standing" to="PlayerState/PostureState/StandingState" method="_on_standing_state_entered"]
[connection signal="state_physics_processing" from="PlayerStateMachine/Root/Posture/Standing" to="PlayerState/PostureState/StandingState" method="_on_standing_state_physics_processing"]
[connection signal="state_entered" from="PlayerStateMachine/Root/Posture/Crouching" to="PlayerState/PostureState/CrouchingState" method="_on_crouching_state_entered"]
[connection signal="state_physics_processing" from="PlayerStateMachine/Root/Posture/Crouching" to="PlayerState/PostureState/CrouchingState" method="_on_crouching_state_physics_processing"]

[editable path="Reticle"]
